/**
* @version $Id$
* @package FrontAccounting
* @copyright (C) 2005 - 2011 FrontAccounting, LLC
* @license http://www.gnu.org/copyleft/gpl-3.0.html GNU/GPL
* FrontAccounting is Free Software
*/

1. Changelog
------------
This is a changelog for FrontAccounting All releases.

2014-07-10 Joe                Added supplier search in Outstanding Purchase Orders and Purchase Orders Inquiry.
2014-07-09 Joe                Added customer search in Search not invoiced Deliveries.
2014-07-07 Joe                Improved readability in Graphics engine, x-legends for all languages.
2014-07-05 Joe                New variable in config.default.php , $UTF8_fontfile. Needed due to FreeSans problem with Arabic and Chinese in Graphics Engine.
2014-07-05 Joe                Enabled RTL text in Graphics Engine. Due to bug in imagettftext.
2014-06-24 Joe                Fixed line overwrite in documents when using rtl language.
2014-06-17 Joe                User account should not be deleted if there are any entries on his/her name.
2014-06-14 Joe                Added short name, name and tax id as search options in customer and supplier lists
2014-06-08 Janusz Dobrowolski Language template update
2014-05-28 Janusz Dobrowolski Customer Credit Note: fixed payments allocation after crediting sales invoice.
2014-05-28 Janusz Dobrowolski Payment/Deposit: new exchange rate was not used for GL postings, now ex_rate is stored before adding transaction.

2014-03-14 Ap.Muthu           Forum Fixes INNER JOINs ** Not in Official Repo As yet ** - sales/includes/db/cust_trans_db.inc, gl/includes/db/gl_db_bank_trans.inc
2013-12-30 Ap.Muthu           query_size to unsigned in users table ** Not in Official Repo As yet ** - sql/alter2.3.sql, en_US-demo.sql, en_US-new.sql
2013-11-23 Ap.Muthu           Slow Query Fix ** Not fully in Official Repo As yet ** (2014-04-05 Update) - sql/alter2.3.sql, en_US-demo.sql, en_US-new.sql

2014-05-21 08:59 +0200 Janusz Dobrowolski